fixed flickering with additional screenshots display

--- a/src/app/popups/more-screenshots/more-screenshots.component.sass
+++ b/src/app/popups/more-screenshots/more-screenshots.component.sass
@@ -4,6 +4,8 @@
 
 .slide
     display: none
+    width: 640px
+    height: 480px
 
 .fade
     animation-name: fade
